Added latest changes and temporary

--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -38,20 +38,20 @@ Hortik, `Sign up for free` sakatu
 
 Kontu berria sortu edo Google kontuarekin konektatu:
 
-![Gmail bidez edo kontu berria sortu](book/images/01.png)
+![Gmail bidez edo kontu berria sortu](images/01.png)
 
 Behien repl.it barruan zaudela, new repl botoia sakatu:
 
-![New Repl](book/images/02.png)
+![New Repl](images/02.png)
 
 
 Hurrengo pantaila ikusiko duzu. Bilatu **Python** eta hasieratu ingurunea
 
-![Python aukeratu](book/images/03.png)
+![Python aukeratu](images/03.png)
 
 Behin hori eginda, programazio ingurunea kargatuko da, hiru gune nagusi dira hemen:
 
-![New Repl](book/images/04.png)
+![New Repl](images/04.png)
 
 
 - Ezkerrean, programa idazteko editorea duzu.
@@ -940,7 +940,7 @@ Oro har, konparaketa eta boolear eragileak baldintzapeko blokeetan, begiztetan e
 
 ## Proposatutako ariketak
 
-0.0 Ariketa
+### 0.0 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta `7` biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -958,7 +958,7 @@ Sartu zenbaki bat: 3
 Biderketa honakoa da: 21
 ```
 
-0.1 Ariketa
+### 0.1 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta bitan zatikatuko duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -975,7 +975,7 @@ Sartu zenbaki bat:60
 Zatiketa da: 30.0
 ```
 
-0.2 Ariketa
+### 0.2 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta . modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -993,7 +993,7 @@ Sartu zenbaki bat: 7
 Modulua honako hau da: 1
 ```
 
-0.3 Ariketa
+### 0.3 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta ber 2 (2ko esponentziala) aplikatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -1011,7 +1011,7 @@ Sartu zenbaki bat: 4
 Esponentzialaren emaitza: 16
 ```
 
-0.4 Ariketa
+### 0.4 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, zeinua aldatu behar diozu eta emaitza kontsolarekin erakutsi.
 
@@ -1030,7 +1030,7 @@ Sartu zenbakia: 4
 Kenketa da: 1
 ```
 
-0.5 Ariketa
+### 0.5 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, `% 2` eragiketa 0ren berdina den egiaztatu behar duzu, eta emaitza erakutsi. Zenbaki bat 2rekin zatitzen bada eta ondarra 0 bada, zenbaki hori bikoitia dela esan nahi du.
 
@@ -1050,7 +1050,7 @@ Sartu zenbaki bat: 8
 Balioa bikoitia da? True
 ```
 
-0.6 Ariketa
+### 0.6 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, zenbaki hori 0 edo handiagoa den egiaztatu behar duzu, hau da, positiboa den.
 
@@ -1069,7 +1069,7 @@ Sartu zenbaki bat: 6
 Positiboa da? True
 ```
 
-0.7 Ariketa
+### 0.7 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, 0 baino txikiagoa den alderatu behar duzu, eta emaitza kontsolaren bidez erakutsi. Zenbakia negatiboa den antzematen ariko ginateke.
 
