--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -215,7 +215,7 @@ Sartu beste zenbaki bat: 10
 
 ## Proposatutako ariketak
 
-1.0 Ariketa
+### 1.0 Ariketa
 Sortu programa bat erabiltzaileari bi zenbaki oso eskatuko dizkiona. Gero pantaila bidez erakutsi ea lehenengo zenbakia bigarrenaren multiploa den. Zenbaki bat bestearen multiploa den jakiteko, moduluaren eragiketa egin behar duzu (`%`) haien artean: 0 bada, multiploa izango da.
 
 ```python
@@ -238,7 +238,7 @@ Sartu beste zenbaki bat: 4
 40  zenbakia  4  zenbakiaren multiploa da.
 ```
 
-1.1 Ariketa
+### 1.1 Ariketa
 
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta ondorengoa egin: lehenik eta behin pantailan erakutsi behar du zenbakia negatiboa edo positiboa den. Gero, zenbakia positiboa bada, negatibo bihurtu behar du, eta negatiboa bada, positibo.
 
@@ -264,7 +264,7 @@ Sartu zenbaki bat: -6
 Bihurketa: 6
 ```
 
-1.2 Ariketa
+### 1.2 Ariketa
 
 Idatzi urteko hilabete baten izena eskatzen duen programa bat eta erakutsi zenbat egun dituen. Hilabete ezezagun bat sartuz gero, "Ez dakigu" mezua erakutsi.
 
@@ -308,7 +308,7 @@ Sartu urteko hilabete bat: Ekaina
 
 Hobespena: saiatu programa motzago egiten `or` eragilea erabiliz.
 
-1.3 Ariketa
+### 1.3 Ariketa
 
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatzen diona eta pantailan zenbaki hori bikoitia eta positiboa den ala ez erakusten duena. Bestela, negatiboa edo bakoitia den adierazi behar duzu.
 
@@ -333,7 +333,7 @@ Sartu zenbaki bat: -9
 - 9 bakoitia eta negatiboa da
 ```
 
-1.4 Ariketa
+### 1.4 Ariketa
 
 Sortu programa bat erabiltzaileari kilotan duen pisua eta zentimetrotan duen altuera eskatzeko eta GMI kalkulatzeko (pisua/(altuera ber 2)); emaitza erakutsi behar du eta gero mezu bat erakutsi:
 
@@ -372,7 +372,7 @@ Zure gmi: 23.66143861546782
 Ondo zaude
 ```
 
-1.5 Ariketa
+### 1.5 Ariketa
 
 Sortu erabiltzaileari jokalari dortsal bat eskatzen dion programa bat eta ondorengoa egin: egiaztatu zenbaki hori 0 eta 99 artean dagoela. Ez badago, programa errore mezu batekin amaitu behar da. Zenbakia 0 eta 99 artekoa bada, programak testu bat erakutsi behar du dortsal bakoitzari dagokion posizioarekin:
 
