--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -347,7 +347,7 @@ Biekin gauza bera egin zenezakeen arren, bakoitzak erabilera berezia du.
 
 ## Proposatutako ariketak
 
-2.0 Ariketa
+### 2.0 Ariketa
 
 Idatzi programa bat `while` begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, `"Ada"`) eta `"Kaixo Ada"` izen hori agurtzeko. `"irten"` testua sartuz gero, begizta amaitu egin behar da.
 
@@ -374,7 +374,7 @@ Kaixo irten
 Amaiera.
 ```
 
-2.1 Ariketa
+### 2.1 Ariketa
 
 Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen diona eta zenbakia `0` ez den bitartean amaitzen ez duen `while` begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen adina aldiz. Zenbakia `0` baino txikiagoa bada, begizta `break` batekin amaitu behar da;
 
@@ -401,7 +401,7 @@ Kaixo
 Sartu zenbaki bat: -1
 ```
 
-2.2 Ariketa
+### 2.2 Ariketa
 
 Sortu erabiltzaileari balio oso bat eskatzen dion programa bat, egiaztatu `0` baino handiagoa dela eta, gainera, bikoitia dela. Hala bada, bistaratu pantailan `*` karakterea zenbakiaren balioa adina aldiz. Erabili `print ("*")`.
 Adibidez, 8 sartuz gero, hau erakutsiko du:
@@ -434,7 +434,7 @@ Sartu zenbaki bat: 6
 *****
 ```
 
-2.3 Ariketa
+### 2.3 Ariketa
 
 Sortu aurrekoaren antzeko programa bat, zenbaki bikoiti eta positiboak bakarrik onartu behar dituena. Sartutako zenbakiarekin `*-` testua pantailan agertu behar da, `*`rekin amaituta. Adibidez:
 
@@ -476,7 +476,7 @@ Sartu zenbaki bat: 10
 *-*-*-*-*-*
 ```
 
-2.4 Ariketa
+### 2.4 Ariketa
 
 Erabiltzaileari zenbaki oso bat eskatzen dion programa bat sortu, eta balio hori erabiliz, lauki bat marraztu behar du pantailan `*` karakterea erabiliz.
 
@@ -514,7 +514,7 @@ Sartu zenbaki bat: 2
 **
 ```
 
-2.5 Ariketa
+### 2.5 Ariketa
 
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatu eta haren faktoria kalkulatzeko. Adibidez, `5` zenbakiaren faktoria `5 x 4 x 3 x 2 x 1 = 120` izango litzateke.
 
@@ -540,7 +540,7 @@ Sartu zenbaki bat: 4
 Emaitza: 24
 ```
 
-2.6 Ariketa
+### 2.6 Ariketa
 
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori lehena (primoa) den ala ez, hau da, bakarrik bere buruarekin edo `1`egatik zatigarria dena. Adibidez: 2, 3, 5, 7, 11, 13, 17,...
 
@@ -575,7 +575,7 @@ Sartu zenbaki bat: 5
 5  zenbakia lehena da.
 ```
 
-2.7 Ariketa
+### 2.7 Ariketa
 
 Sortu `0`tik `10`era biderketa taula guztiak erakusten dituen programa bat.
 
