--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -565,7 +565,7 @@ garbia = testua.rstrip("\n")
 
 ## Proposatutako ariketak
 
-3.0 Ariketa
+### 3.0 Ariketa
 
 Idatz ezazu 5 elementuko zerrenda bat hasieratzen duen programa bat:
 
@@ -591,7 +591,7 @@ Emaitza:
 [True, True, True, True, True]
 ```
 
-3.1 Ariketa
+### 3.1 Ariketa
 
 Idatzi 10 zenbakiko zerrenda bat definitzen duen programa bat. Ondoren, begizta bat sortu behar duzu, posizio bikoitietan 0 bat sartzeko.
 
@@ -610,7 +610,7 @@ Emaitza:
 [0, 2, 0, 4, 0, 6, 0, 8, 0, 10]
 ```
 
-3.2 Ariketa
+### 3.2 Ariketa
 
 Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen menu batekin: `1` elementua sartu, `2` ezabatu, `3` erakutsi eta `4` irten. Menua erabiltzaileak `4`. aukera sartzen ez duen bitartean erakutsi behar da. `1` aukera aukeratuz gero, edozein balioko `append` egingo da, `2` aukeratuz gero, `pop` egingo da, eta `3` aukeratuz gero, zerrendako edukia erakutsiko da.
 
@@ -651,7 +651,7 @@ Aukera ezazu: 3
 []
 ```
 
-3.3 Ariketa
+### 3.3 Ariketa
 
 Idatzi erabiltzaileari hitzak eskatu eta esaldi bat eraikitzeko hitzak kateatzen dituen programa bat, erabiltzaileak puntu bat idatzi arte (.). Azkenean programak sortutako esaldia erakutsi beharko du. Erabiltzaileak ez badu ezer idazten, ez da ezer kateatu behar.
 
@@ -678,7 +678,7 @@ Idatzi hitz bat:.
 Kaixo, zer moduz? .
 ```
 
-3.4 Ariketa
+### 3.4 Ariketa
 
 Idatzi programa bat erabiltzaileari bere izena, jaioterria eta jaioturtea eskatzeko. Ondoren, esaldi bat erakutsi behar duzu informazio guztiarekin, interpolazioa edo kate txantiloiak erabiliz.
 
@@ -701,7 +701,7 @@ Idatzi zure jaioturtea: 2006
 Ada duzu izena, Tevergan jaio zinen 2006 urtean.
 ```
 
-3.5 Ariketa
+### 3.5 Ariketa
 
 Idatzi erabiltzaileari esaldi bat eskatzen dion programa bat. Gero esaldi horretako hitz bat eskatu behar du. Azkenkik, programak esaldi bera itzuliko du baina aukeratutako hitza letra larriz agertu beharko da:
 
@@ -729,7 +729,7 @@ Idatzi esalditik hitz bat: ona
 Zein ONA den Ada andereñoa
 ```
 
-3.6 Ariketa
+### 3.6 Ariketa
 
 Sortu 5 izeneko zerrenda bat definitzen duen programa bat eta, ondoren, erabili begizta bat izenak banan-banan erakusteko.
 
@@ -755,7 +755,7 @@ Pip
 Bilbo
 ```
 
-3.7 Ariketa
+### 3.7 Ariketa
 
 Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Gero, beste begizta bat sortu, elementu bakoitza inkrementatu (+1) eta erakusteko.
 
@@ -792,7 +792,7 @@ Emaitza:
 3
 ```
 
-3.8 Ariketa
+### 3.8 Ariketa
 
 Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen bilatzeko. Errepikatutako bat aurkitzea nahikoa da.
 
@@ -822,7 +822,7 @@ Emaitza:
 Zenbaki bat errepikatuta dago
 ```
 
-3.9 Ariketa
+### 3.9 Ariketa
 
 Sortu 10 zenbaki osorekin hasitako zerrenda bat definituko duen programa. Gero, beste begizta bat sortu, zenbaki positiboak, negatiboak eta 0 direnak zenbatuko dituena.
 
@@ -854,7 +854,7 @@ Negatiboak: 2
 Zeroak: 1
 ```
 
-3.10 Ariketa
+### 3.10 Ariketa
 
 Sortu 5x10 elementuko bi dimentsioko zerrenda bat definituko duen programa bat. Zerrendako balioak ausazko (aleatorio edo _random_) zenbakiak erabiliz hasten dituen begizta bat sortzen du.
 Zenbaki aleatorioak sortzeko, `random` eta `random.randint()` funtzioa erabiltzen du liburutegiak, hemen erakusten den bezala:
@@ -886,7 +886,7 @@ for i in range(len(matrizea)):
             print("15 aurkitu da ", i, j)
 ```
 
-3.11 Ariketa
+### 3.11 Ariketa
 
 Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen programa. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak lekuz aldatzen aldatzen ditu, indizeetan `random` funtzioa erabiliz. Gero emaitza erakusten du.
 
