--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -422,7 +422,7 @@ Edonork idatz ditzake funtzioak eta kodea zati txikitan antolatu. Baina _pro_ gi
 
 ## Proposatutako ariketak
 
-4.0 Ariketa
+### 4.0 Ariketa
 
 Idatzi bi zenbaki jasotzen dituen funtzio bat, detektatu zein den handiena eta erakutsi horien arteko aldea.
 
@@ -448,7 +448,7 @@ Aldea hau da: 5
 Aldea hau da: 8
 ```
 
-4.1 Ariketa
+### 4.1 Ariketa
 
 Idatzi bi zenbaki eta eragiketa zeinu aritmetiko bat jasotzen dituen programa bat: `+`, `-`,`*`, `/`. Funtzioak eragiketa horren emaitza itzuli behar du bi zenbakien artean.
 
@@ -478,7 +478,7 @@ Emaitza:
 Eragiketa ezezaguna
 ```
 
-4.2 Ariketa
+### 4.2 Ariketa
 
 `def agurtu (momentua)`
 
@@ -515,7 +515,7 @@ Arratsalde on.
 Arratsalde on.
 ```
 
-4.3 Ariketa
+### 4.3 Ariketa
 
 `hasiZenbakiarekin (luzera, zenbakia)`
 
@@ -541,7 +541,7 @@ Emaitza:
 [3, 3, 3, 3, 3, 3, 3, 3, 3, 3]
 ```
 
-4.4 Ariketa
+### 4.4 Ariketa
 
 `def ausazkoa (max)`
 
@@ -562,7 +562,7 @@ Emaitza:
 3
 ```
 
-4.5 Ariketa
+### 4.5 Ariketa
 
 `izenaSortu(silabak)`
 
@@ -595,7 +595,7 @@ Emaitza:
 xamozu
 ```
 
-4.6 Ariketa
+### 4.6 Ariketa
 
 `def pasahitzaSortu(luzera)`
 
@@ -629,7 +629,7 @@ Emaitza:
 _! 5_flg $
 ```
 
-4.7 Ariketa
+### 4.7 Ariketa
 
 Sortu `faktura` izeneko funtzioa (produktuak, kantitateak, prezioak), tamaina bereko hiru array jasotzen dituena, honako eduki hauekin:
 
@@ -675,7 +675,7 @@ Irina x 2: 0.8
 Guztira: 4.0
 ```
 
-4.8 ariketa
+### 4.8 ariketa
 
 Hau zailagoa izango da. RPG jokuetako pertsonaiak sortzeko funtzio bat duen programa bat sortzen du.
 
