--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -473,7 +473,7 @@ kasu askotan, programaren erabilera errazteko eta kodea modu argiagoan banatzeko
 
 ## Proposatutako ariketak
 
-5.0 Ariketa
+### 5.0 Ariketa
 
 Idatzi `Instrumentua` izeneko klase bat definitzen duen programa bat. Eraikitzaileak parametro hauek izan behar ditu, hurrenez hurren: `izena` eta `mota`. Gainera, `jo`  izeneko funtzio bat gehitu behar duzu, mezu bat aterako duena. Baita `info` funztioa, atributuen informazioa duen testu bat itzultzeko.
 Sortu klasearen instantzia bat eta deitu bere funtzioetara.
@@ -502,7 +502,7 @@ Gitarra jotzen
 Hari-gitarra
 ```
 
-5.1 Ariketa
+### 5.1 Ariketa
 
 Idatz ezazu programa bat, `IzenZuzena` izeneko klase bat definituko duena, eta, bertan, `__init__` eraikitzailea bat `izena` eta `abizena` atributuak hasieratzeko. Gainera, klaseak `zuzendu` izeneko metodo bat izan behar du, `izena` eta `abizena` atributuak zuzenduko dituena. `zuzendu` metodoak, lehenengo hizkiak larri eta gainerakoak xehe itzuliko ditu.
 
@@ -538,7 +538,7 @@ Emaitza:
 Juan Pérez
 ```
 
-5.2 Ariketa
+### 5.2 Ariketa
 
 Idatz ezazu programa bat `Batuketa`, izeneko klase bat definitzeko, eta bi zenbakirekin hasieratzeko.
 
@@ -595,7 +595,7 @@ Emaitza:
 666
 ```
 
-5.3 Ariketa
+### 5.3 Ariketa
 
 Sortu programa bat `Txanpona` izeneko klase batekin. Klaseak eraikitzaile huts bat izan behar du, eta funtzio bakar bat, `bota` izenekoa. Horren emaitza "aurpegiaren" edo "gurutzearen" artean ausaz aukeratutako *string* bat izan behar da. Sortu klasearen instantzia bat probatzeko.
 
@@ -629,7 +629,7 @@ gurutzea
 ...
 ```
 
-5.4 Ariketa
+### 5.4 Ariketa
 
 Sortu programa bat N aurpegiko dado baten portaera simulatzeko, `Dadoa` izeneko klase batekin. Sortu klaseko instantzia bat jaurtiketak probatzeko.
 
@@ -694,7 +694,7 @@ Emaitza:
 ...
 ```
 
-5.5 Ariketa
+### 5.5 Ariketa
 
 Sortu bi klase dauzkan programa bat:
 
@@ -752,7 +752,7 @@ Maradona Aurrelaria 10
 Beckenbauer Defentsa 4
 ```
 
-5.6 Ariketa
+### 5.6 Ariketa
 
 Sortu ondorengo klaseak definitzen dituen programa bat:
 
@@ -834,7 +834,7 @@ Dell 4553.4 Lentium 4 ordenagailua
 Chanmhung telefonoa 434.4 665745345
 ```
 
-5.7 Ariketa
+### 5.7 Ariketa
 
 Txanogorritxo proiektua sortuko dugu, non protagonistak janari saski bat kudeatzen duen. Janari mota askotakoa izango da. Hauek dira egin beharreko klaseak:
 
