--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -367,7 +367,7 @@ Oraingo 1. aukera
 
 ## Proposatutako ariketak
 
-6.0 Ariketa
+### 6.0 Ariketa
 
 Sortu `Fitxategia` izeneko klase bat, honako funtzio hauekin:
 
@@ -424,7 +424,7 @@ Aurreko edukia: Eduki aldatua!!! 2024-08-18
 Edukia: Edukia aldatuta!!! 2024-08-23
 ```
 
-6.1 Ariketa
+### 6.1 Ariketa
 
 Sor ezazu `Zerrenda` izeneko klase bat, honako funtzio hauekin:
 
@@ -519,7 +519,7 @@ Badago!
 1
 ```
 
-6.2 Ariketa
+### 6.2 Ariketa
 
 Sor ezazu `Zereginak` klase bat, honako funtzio hauekin:
 
@@ -620,7 +620,7 @@ Emaitza:
 ---
 ```
 
-6.3 Ariketa
+### 6.3 Ariketa
 
 Sor ezazu `Jokalaria` izeneko klase bat, eduki hau izango duena:
 
