Almost dinished the program

--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -713,7 +713,7 @@ kontagailua += 2
 Gauza bera egin daiteke operadore guztiekin:
 
 | Eragiketa | Horixe bera | Laburtua |
-| -- | -- | -- |
+|--|--|--|
 | a = a + 1 | | a + = 1 |
 | a = a - 1 | | a - = 1 |
 | a = a* 1 | | a* = 1 |
@@ -822,12 +822,12 @@ Emaitza hauxe izango litzateke: `True`.
 
 Aukera guztiak laburbiltzeko, **egiaren taula** delakoa honako hau izango litzateke:
 
-| a | | b | emaitza |
-| -- | -- | -- | -- | |
-| `Helburua | `Argazkia | `Faialdea |
-| `Helburua | `Arduria | `Txurruna | `Falseere |
-| `Leharetxea | `Danera | `Faialdea | `Falseere |
-| `Erresuma | `Txurruna | `Trueu | `Trueu |
+| a | and | b | emaitza |
+|--|--|--|--|
+| False| and |False| False |
+| False| and |True | False |
+| True | and |False | False |
+| True | and |True | True |
 
 0.8 Ariketa
 
@@ -861,12 +861,12 @@ Emaitza hauxe izango litzateke: `True`.
 
 Aukera guztiak laburbiltzeko, hauxe izango litzateke `or` operadorearen egiaren taula.
 
-| a | | b | emaitza |
-| -- | -- | -- | -- | |
-| `Helburua | `Ordua | `Ordua |
-| `Orduera | `Ordua | `Txurruna | `Trueu |
-| `Errueu | `Orduera | `Faialdea | `Trueu |
-| `Erresuma | `Ordua | `Txurruna | `Trueu |
+| a | or | b | emaitza |
+|--|--|--|--|
+| False| or |False| False |
+| False| or |True | True |
+| True | or |False | True |
+| True | or |True | True |
 
 0.9 Ariketa
 
