--- a/book_eu/07.md
+++ b/book_eu/07.md
@@ -118,7 +118,7 @@ OK
 Komando hauek sistemaren kontsolan idatzi beharko dituzu.
 
 ```console
-pip3 install birtualenv
+pip3 install virtualenv
 Defaulting to user installation because normal site-packages is not writeable
 Collecting virtualenv
 Downloading virtualenv-20.0.31-py2.py3-none-any.whl (4.9 MB)
