--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -67,6 +67,8 @@ Beste _online_ aukerak:
 
 # Kaixo mundua
 
+![Kaixo Mundua](images/helloworld.jpg)
+
 Programatzaileek idatzi ohi duten lehen programa mezu bat pantailatik ateratzea da. Eta mezu hori munduari egindako agurra izan ohi da: "Kaixo mundua!"
 Honela egiten da:
 
@@ -135,6 +137,8 @@ Batzuetan, iruzkinak aldi baterako erabiltzen dira exekutatzea nahi ez dugun kod
 Oharra: oro har, iruzkinak saihestu behar dituzu. Programatzaile on batek programa ulerterrazak idazten saiatu behar du, inolako iruzkinik edo azalpenik behar ez dutenak.
 
 # Aldagaiak
+
+![Aldagaiak](images/katu.jpg)
 
 Aldagaiek datuak gordetzeko balio dute. Programek, funtsean, arazo bat konpontzeko eta emaitza bat emateko datuak maneiatzen dituzte. Prozesu guztian zehar datuak gordetzea beharrezkoa da, eta horretarako aldagaiak erabiltzen dira. Aldagaiak datu edukiontziak bezalakoak dira. Sukaldaritzan erabiltzen diren edalontziak eta platerak bezalakoak dira nolabait: zerbait dute, horrekin lan egiten da, nahastu egiten da, prozesatu egiten da eta emaitza bat lortzen da: zorte pixka batekin zerbait goxoa lortzen da.
 
@@ -274,6 +278,8 @@ Jarraian, oinarrizko datu motak ikusiko ditugu.
 
 ## Zenbakiak
 
+![Zenbakiak](images/zenbakiak.jpg)
+
 Mota guztietako zenbakiak dira:
 
 - Osoak:
@@ -303,6 +309,8 @@ tenperaturaMarten = -50.676
 ```
 
 ## Testua
+
+![Testua](images/testua.jpg)
 
 Testua, kateak edo *string* ere deituak, komatxo bikoitz edo sinpleen arteko edozein hizki multzoa da.
 
@@ -360,6 +368,8 @@ Beste karaktere berezi batzuk:
 
 ## Boolearrak
 
+![Boolearrak](images/boolear.jpg)
+
 Boolear motak bi balio posible bakarrik izan ditzake: `True` ala `False`: egia ala gezurra. Programazioan funtsezko datua da, erabakiak hartzeko erabiltzen baita.
 
 ```python
@@ -402,6 +412,8 @@ print (izenak [4]) #ERROREA!
 Aurrerago itzuliko gara zerrendetara eta beste egitura batzuetara.
 
 ## None
+
+![None](images/none.png)
 
 Arraroa dirudien arren, programetan batzuetan hutsa edo ezereza irudikatzen duen zerbaitekin hitz egin behar izaten da.
 Badago hitz bat Python-en hutsa irudikatzeko aukera ematen diguna, eta hori da `None`:
