--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -1,5 +1,7 @@
 # Baldintzak
 
+![Baldintzak](images/baldintzak.jpg)
+
 Askotan, programek gauza bat edo beste egin behar dute, baldintza baten arabera. Adibidez, erabiltzaile batek datu oker bat sartzen badu, programa amaitu egingo da. Datu batek balio jakin bat badu, modu batera prozesatzen da, eta bestela, beste batera. Nola lortzen da portaera hori? Baldintzen bidez.
 
 Baldintzak programazio egiturak dira. Egitura hauek aukera ematen digute kode bat exekutatzea soilik baldintza batzuk betetzen direnean.
