--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -1,5 +1,7 @@
 # Begiztak
 
+![Begiztak](images/begiztak.png)
+
 Hasieran esan bezala, ordenagailuak oso tentelak dira. Esaten zaiena egiten dute. Baina, aldiz, gaitasun izugarriak eta pazientzia amaigabea dauzkate. Ez zaie batere inporta behar adina aldiz edozer gauza egitea.
 
 Ordenagailu baten zeregin ohikoenetako bat agindu bat errepikatzea da. Hori begizta egituren bidez lor daitekeen zerbait da. Begizta ekintza errepikatu bat da. Oro har, begizta batek baldintza bat betetzen du exekutatzeko: baldintza horiek betetzen badira, orduan begizta horrek dituen aginduak exekutatuko dira.
