--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -1,5 +1,7 @@
 # Datu egiturak
 
+|![Neko](images/neko.jpg)|![Neko](images/neko.jpg)|![Neko](images/neko.jpg)|
+
 Orain arte datu sinpleak erabili ditugu. Zenbaki bat, testu bat eta abar duten aldagaiekin jolasten aritu gara. Baina badira datu konplexuagoak sortzeko aukera ematen diguten beste datu mota batzuk ere: datu bakar bat baino zerbait gehiago eduki dezakete.
 
 Ordenagailu programek oso gauza zailak egin ditzakete, baina, funtsean, datuak prozesatzen dituzte. Eta askotan, datu horiek sekuentzia luzeetan datoz. Jarraian, datu mota horietako batzuk ikusiko ditugu.
