--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -1,5 +1,9 @@
 # Funtzioak
 
+|miau()|lo()|
+|--|--|
+|![Neko](images/miau.jpg)|![Neko](images/lo.jpg)|
+
 Funtzioak programen barruan dauden programa txikiak dira. Adibidez, funtzio honek pantailan agur bat besterik ez du ateratzen:
 
 ```python
@@ -244,12 +248,12 @@ Oharra: aurreko funtzioa argiago geratzen da horrela.
 
 ```python
 def berredura (kopurua, aldiz):
-  if (batzuetan < 1): return 0
-
+  if (aldiz < 1):
+    return 0
   guztira = 1
-  for i in range (batzuetan):
+  for i in range (aldiz):
     guztira = guztira * kopurua
-  return guztira # TODO CHECK
+  return guztira
 ```
 
 ## Dei kabituak
