--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -1,5 +1,7 @@
 # Salbuespenak
 
+[Salbuespenak](images/errorea.jpg)
+
 Baliteke programazioan bikaina izatea. Baina, hala ere, zure programek huts egin dezakete, gauza batzuk zure programaren kontroletik kanpo daudelako. Beraz, nahiz eta zure programa zuzena izan, gauzak oker joan daitezke.
 
 Adibidez:
@@ -64,6 +66,8 @@ Halaber, programa hobetu ahal izango litzateke, balioa berriro eskatzeko eta ez 
 Errore motaren araberako salbuespen espezifikoak daude, eta errore-mezu zehatzagoa erakusteko erabil daitezke.
 
 # Fitxategien kudeaketa
+
+[Fitxategiak](images/fitxategiak.jpg)
 
 Orain arte datu gutxi erabili ditugu, erabiltzaileak pantaila bidez idazten duena edo aldagaietan daukaguna. Baina datu kopuru handiagoak erabili nahi baditugu, fitxategietan irakurri eta idatz dezakegu.
 Era guztietako fitxategiak daude: testua, multimedia (musika, bideoa) eta fitxategi bitarrak. Horiek guztiak programa batetik erabil daitezke. Sarrera gisa, ikus dezagun nola erabil ditzakegun testu fitxategiak.
@@ -215,6 +219,8 @@ fitxategia.close()
 ```
 
 # Liburutegiak
+
+[Liburutegiak](images/liburutegiak.jpg)
 
 Programak gero eta konplexuagoak diren heinean, litekeena da funtzio asko definitu behar izatea, edo diseinua klaseetan bereizi behar izatea, etab.
 Dena fitxategi berean eduki dezakegun arren, ez litzateke gure kodea antolatzeko modurik onena. Egokiena da klase bakoitza bere fitxategian bereiztea, eta funtzio edo funtzio-multzo bakoitza bere fitxategian biltzea.
