--- a/book_eu/07.md
+++ b/book_eu/07.md
@@ -1,6 +1,6 @@
-# Gehigarriak
+# Python-i buruz
 
-Python-i buruz
+[Python](images/python.png)
 
 Zergatik aukeratu dugu Python? Bere abantaila ugariengatik. Lengoai interpretatua da, sintaxi oso erraza duena, eta ikasteko oso erraza da. Ez zara kezkatu behar (ez asko behintzat) datu motaz. Kontuan hartu behar dugun bakarra zera da: bloke bakoitzeko tabulazioak errespetatzea.
 
